<resources>
    <string name="app_name">CM_Workshop</string>
    <string name="title_activity_maps">Map</string>

    <string name="btn_reset">Reset</string>
    <string name="btn_ready">Ready</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_normal">Normal</string>
    <string name="btn_satellite">Satellite</string>
    <string name="btn_terrain">Terrain</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
