<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/activity_maps2"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    </include>

    <Button
        android:id="@+id/btn_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_normal"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btn_satellite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btn_satellite"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btn_terrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_terrain"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>